Correção de links
Foi feita a correção dos links de retorno ao index, links de imagens e links do style.

--- a/personagens/Jon/gameOverJon1.html
+++ b/personagens/Jon/gameOverJon1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/personagens/Jon/styleJon.css">
+    <link rel="stylesheet" href="./styleJon.css">
     <title>Game Over 1</title>
 </head>
 
@@ -19,7 +19,7 @@
                 Quando no meio do Treino ele sofreu uma distensão muscular.<br>
                 <strong> Infelizmente Jon Jones não tera condições de competir no UFC 147.</strong>
             </p>
-            <button class="botaovoltarinicio"><a href="/index.html">Volte ao começo</a></button>
+            <button class="botaovoltarinicio"><a href="../../index.html">Volte ao começo</a></button>
         </main>
 
         <footer class="rodape">
