--- a/personagens/andersonSilva/andersonGameOver1.html
+++ b/personagens/andersonSilva/andersonGameOver1.html
@@ -20,7 +20,7 @@
                 Quando no meio do Treino ele sofreu uma queda brusca e quebrou o braço.<br>
                 <strong> Infelizmente Anderson Silva não tera condições de lutar.</strong>
             </p>
-            <button class="botaovoltarinicio"><a href="/index.html">Volte ao começo</a></button>
+            <button class="botaovoltarinicio"><a href="../../index.html">Volte ao começo</a></button>
         </main>
 
         <footer class="rodape">
