--- a/personagens/andersonSilva/andersonGameOver2.html
+++ b/personagens/andersonSilva/andersonGameOver2.html
@@ -21,7 +21,7 @@
                 Logo apos comer, Anderson Silva começou a passar mal.<br>
                 <strong> Ele comeu um baiacu contaminado e morreu a caminho do Hospital. </strong>
             </p>
-            <button class="botaovoltarinicio"><a href="/index.html">Volte ao começo</a></button>
+            <button class="botaovoltarinicio"><a href="../../index.html">Volte ao começo</a></button>
         </main>
 
         <footer class="rodape">
