--- a/personagens/andersonSilva/andersonGameOver3.html
+++ b/personagens/andersonSilva/andersonGameOver3.html
@@ -21,7 +21,7 @@
                O adversário dele sentou a mão na cara dele.<br>
                 <strong> Anderson Silva foi Nocauteado, perdeu 3 dentes.</strong>
             </p>
-            <button class="botaovoltarinicio"><a href="/index.html">Volte ao começo</a></button>
+            <button class="botaovoltarinicio"><a href="../../index.html">Volte ao começo</a></button>
         </main>
 
         <footer class="rodape">
