Criação de pagina e função
Foi criada a Pagina jon2_2.html e adicionado uma nova Função no arquivo funcoesjon.js.

--- a/personagens/Jon/jon2_2.html
+++ b/personagens/Jon/jon2_2.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleJon.css">
-    <title>Document</title>
+    <title> Jon Jones 1</title>
 </head>
-<body>
-    <h1>aqui</h1>
+
+<body class="jon_body">
+
+<main class="jon_main">
+        <h1 class="jon_tituloprincipal">Fase 1 - Burnout</h1>
+        <p class="jon_paragrafo" > <strong>Jon Jones</strong> ira participar do UFC 147,
+            para isso ele precisa decidir qual treinamento ele ira fazer. Escolha:
+        </p>
+        <ol class="jon_escolhas">
+            <li >Musculação</li>
+            <li >Treinamento Funcional</li>
+        </ol>
+        <button onclick="jon1_1()" class="jon_button">Responda 1 ou 2</button>
+    </main>
+    <footer class="rodape">
+        <p>&copy;Todos os Direitos Reservados - 2022 - Gabriel Dias T14</p>
+    </footer>
+    <script src="/personagens/Jon/funcoesjon.js"></script>
 </body>
 </html>
