Criação de nova Page e Modificações
Foi criada a pagina gameOver2.html, e feito algumas modificações no arquivo jon2_2.html

--- a/personagens/Jon/jon2_2.html
+++ b/personagens/Jon/jon2_2.html
@@ -11,15 +11,16 @@
 <body class="jon_body">
 
 <main class="jon_main">
-        <h1 class="jon_tituloprincipal">Fase 1 - Burnout</h1>
-        <p class="jon_paragrafo" > <strong>Jon Jones</strong> ira participar do UFC 147,
-            para isso ele precisa decidir qual treinamento ele ira fazer. Escolha:
+        <h1 class="jon_tituloprincipal">Fase 1 - Baladinha?</h1>
+        <p class="jon_paragrafo" > Após <strong>Jon Jones</strong> realizar uma sequencia de 
+            treinamentos funcionais, ele esta super cansado, stressado, exausto psicologicamente. 
+            <strong> Jon Jones foi convidado para uma balada, ele deve ir ou não ?</strong>
         </p>
         <ol class="jon_escolhas">
-            <li >Musculação</li>
-            <li >Treinamento Funcional</li>
+            <li > Fica Treinando na Academia</li>
+            <li >Vai curtir a baladinha Marota</li>
         </ol>
-        <button onclick="jon1_1()" class="jon_button">Responda 1 ou 2</button>
+        <button onclick="jon1_2()" class="jon_button">Responda 1 ou 2</button>
     </main>
     <footer class="rodape">
         <p>&copy;Todos os Direitos Reservados - 2022 - Gabriel Dias T14</p>
