--- a/personagens/Jon/jon2_2.html
+++ b/personagens/Jon/jon2_2.html
@@ -25,6 +25,6 @@
     <footer class="rodape">
         <p>&copy;Todos os Direitos Reservados - 2022 - Gabriel Dias T14</p>
     </footer>
-    <script src="/personagens/Jon/funcoesjon.js"></script>
+    <script src="./funcoesjon.js"></script>
 </body>
 </html>
