--- a/personagens/Jon/jon4_4.html
+++ b/personagens/Jon/jon4_4.html
@@ -8,18 +8,18 @@
     <title> Jon Jones 1</title>
 </head>
 
-<body class="jon_body">
+<body class="jonvitoria_body">
 
 <main class="jon_main">
-        <h1 class="jon_tituloprincipal">Fase 1 - Preparação</h1>
-        <p class="jon_paragrafo" > <strong>Jon Jones</strong> ira participar do UFC 147,
-            para isso ele precisa decidir qual treinamento ele ira fazer. Escolha:
-        </p>
-        <ol class="jon_escolhas">
-            <li >Musculação</li>
-            <li >Treinamento Funcional</li>
-        </ol>
-        <button onclick="jon1_1()" class="jon_button">Responda 1 ou 2</button>
+        <h1 class="jon_tituloprincipal">Fase 1 - Grande Luta</h1>
+       
+        <p class="jon_paragrafo"> <strong> Após uma luta intensa no chão, Jon Jones conseguiu aplicar um 
+            Mata leão no seu oponente, seu oponente apagou. JON JONES é o novo campeão do UFC 147.
+        </strong> </p>
+        <h2 class="vitoria"> Obrigado por jogar!!!</h2>
+        
+        <button class="jon_button"> <a href="../../index.html"> Voltar ao Inicio </a> </button>
+
     </main>
     <footer class="rodape">
         <p>&copy;Todos os Direitos Reservados - 2022 - Gabriel Dias T14</p>
