--- a/selecaopersonagem.html
+++ b/selecaopersonagem.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <h2 class="titulolutadores">Jon Jones</h2>
-            <a href="./personagens/Jon/jon1_1.html"><img class="lutadores"src="jon.png.png" alt=""></a>
+            <a href="./personagens/Jon/jon1_1.html"> <img class="lutadores" src="./personagens/Jon/imagensJon/jon.png" alt=""> </a>
             <p>"Bones" <br> <strong>26-1-0</strong> (V-D-E) </p>
         </li>
         <li>
