--- a/personagens/dwayne/dwayne3_3.html
+++ b/personagens/dwayne/dwayne3_3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,22 +11,23 @@
 
 <body class="dwayne_body">
 
-<main class="dwayne_main">
-        <h1 class="dwayne_tituloprincipal">LUTA - ROUND 1 ?</h1>
-        <p class="dwayne_paragrafo" > <strong>Dwayne</strong> Acabou de Entrar no octógono <br>
-            O Juiz deu inicio a luta. Agora Dwayne tem que decidir, ele deve ir para cima do oponente com tudo
-            ou Respirar e ir com calma ?
-            
+    <main class="dwayne_main">
+        <h1 class="dwayne_tituloprincipal">LUTA - ROUND 3 ?</h1>
+        <p class="dwayne_paragrafo"> <strong>Dwayne</strong> jogou seu adversário no chão, e esta dominando a luta.
+            <br>
+            <strong>Neste momento ele deve decidir qual golpe vai aplicar no seu adversário</strong> Mata Leão ou
+            Chave de Braço ?
         </p>
         <ol class="dwayne_escolhas">
-            <li >Sim, ele deve ir com tudo</li>
-            <li >Não, ele deve ir com Calma</li>
+            <li>Chave de Braço</li>
+            <li>Mata Leão</li>
         </ol>
-        <button onclick="dwayne1_1()" class="dwayne_button">Responda 1 ou 2</button>
+        <button onclick="dwayne3_3()" class="dwayne_button">Responda 1 ou 2</button>
     </main>
     <footer class="rodape">
         <p>&copy;Todos os Direitos Reservados - 2022 - Gabriel Dias T14</p>
     </footer>
     <script src="./funcaodwayne.js"></script>
 </body>
+
 </html>
