--- a/selecaopersonagem.html
+++ b/selecaopersonagem.html
@@ -10,28 +10,30 @@
 </head>
 
 <body>
-    
+
 
     <h1 class=" tituloprincipal"> SELECIONE SEU PERSONAGEM</h1>
     <ul class="personagens">
         <li>
 
             <h2 class="titulolutadores">Anderson Silva</h2>
-            <a href="./personagens/andersonSilva/anderson1_1.html"><img class="lutadores" src="./personagens/andersonSilva/imagensAnderson/anderson.png" alt="Anderson Silva"></a>
+            <a href="./personagens/andersonSilva/anderson1_1.html"><img class="lutadores"
+                    src="./personagens/andersonSilva/imagensAnderson/anderson.png" alt=" Foto doAnderson Silva"></a>
             <p>"The Spider" <br> <strong>34-11-0</strong> (V-D-E) </p>
         </li>
         <li>
             <h2 class="titulolutadores">Jon Jones</h2>
-            <a href="./personagens/Jon/jon1_1.html"> <img class="lutadores" src="./personagens/Jon/imagensJon/jon.png" alt=""> </a>
+            <a href="./personagens/Jon/jon1_1.html"> <img class="lutadores" src="./personagens/Jon/imagensJon/jon.png"
+                    alt="Foto do Jon Jones"> </a>
             <p>"Bones" <br> <strong>26-1-0</strong> (V-D-E) </p>
         </li>
-        <li>
+        <li> 
             <h2>Dwayne J.</h2>
-            <img class="lutadores" src="Dwayne.png.png" alt="">
+          <a href="./personagens/dwayne/dwayne1_1.html"> <img class="lutadores" src="./personagens/dwayne/imagensDwayne/Dwayne.png" alt="Foto do Dwayne"></a>
             <p>"The Rock"<br><strong>28-0-0</strong> (V-D-E)</p>
         </li>
     </ul>
-   
+
     <footer class="rodape">
         <p>&copy;Todos os Direitos Reservados - 2022</p>
     </footer>
