--- a/personagens/Jon/jon3_3.html
+++ b/personagens/Jon/jon3_3.html
@@ -11,7 +11,7 @@
 <body class="jon_body">
 
 <main class="jon_main">
-        <h1 class="jon_tituloprincipal">Fase 1 - Grande Luta</h1>
+        <h1 class="jon_tituloprincipal"> Qual vai ser ?</h1>
        
         <p class="jon_paragrafo" > Após <strong>Jon Jones</strong> Curtir uma baladinha marota, ele esta 100% Revigorado.
         <br>
