--- a/personagens/Jon/jon4_4.html
+++ b/personagens/Jon/jon4_4.html
@@ -11,7 +11,7 @@
 <body class="jonvitoria_body">
 
 <main class="jon_main">
-        <h1 class="jon_tituloprincipal">Fase 1 - Grande Luta</h1>
+        <h1 class="jon_tituloprincipal">VITORIA !</h1>
        
         <p class="jon_paragrafo"> <strong> Após uma luta intensa no chão, Jon Jones conseguiu aplicar um 
             Mata leão no seu oponente, seu oponente apagou. JON JONES é o novo campeão do UFC 147.
