--- a/personagens/selecaopersonagem.html
+++ b/personagens/selecaopersonagem.html
@@ -17,19 +17,20 @@
         <li>
 
             <h2 class="titulolutadores">Anderson Silva</h2>
-            <a href="./personagens/andersonSilva/anderson1_1.html"><img class="lutadores"
-                    src="./personagens/andersonSilva/imagensAnderson/anderson.png" alt=" Foto doAnderson Silva"></a>
+            <a href="./andersonSilva/anderson1_1.html"><img class="lutadores"
+                    src="./andersonSilva/imagensAnderson/anderson.png" alt=" Foto doAnderson Silva"></a>
             <p>"The Spider" <br> <strong>34-11-0</strong> (V-D-E) </p>
         </li>
         <li>
             <h2 class="titulolutadores">Jon Jones</h2>
-            <a href="./personagens/Jon/jon1_1.html"> <img class="lutadores" src="./personagens/Jon/imagensJon/jon.png"
+            <a href="./Jon/jon1_1.html"> <img class="lutadores" src="./Jon/imagensJon/jon.png"
                     alt="Foto do Jon Jones"> </a>
             <p>"Bones" <br> <strong>26-1-0</strong> (V-D-E) </p>
         </li>
-        <li> 
+        <li>
             <h2>Dwayne J.</h2>
-          <a href="./personagens/dwayne/dwayne1_1.html"> <img class="lutadores" src="./personagens/dwayne/imagensDwayne/Dwayne.png" alt="Foto do Dwayne"></a>
+            <a href="./dwayne/dwayne1_1.html"> <img class="lutadores"
+                    src="./dwayne/imagensDwayne/Dwayne.png" alt="Foto do Dwayne"></a>
             <p>"The Rock"<br><strong>28-0-0</strong> (V-D-E)</p>
         </li>
     </ul>
