--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
 
         <div class="play">
-            <button class="botao_principal"> <a href="selecaopersonagem.html">Play</a></button>
+            <button class="botao_principal"> <a href="./personagens/selecaopersonagem.html">Play</a></button>
         </div>
     </main>
     <footer class="rodape">
