--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section class="home">
-            <p class="tituloprincipal"> UFC FIGHT </p>
+            <p class="tituloprincipal"> UFC FIGHT 22 </p>
 
             <img class="wallpaperhome" src="wallpaper2.jpeg" alt="imagem de fundo UFC">
 
