--- a/personagens/Jon/gameOverJon2.html
+++ b/personagens/Jon/gameOverJon2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleJon.css">
-    <title>Game Over 2</title>
+    <title>Game Over 2</title> .
 </head>
 
 <body>
