--- a/personagens/Jon/jon1_1.html
+++ b/personagens/Jon/jon1_1.html
@@ -11,7 +11,7 @@
 <body class="jon_body">
 
 <main class="jon_main">
-        <h1 class="jon_tituloprincipal">Fase 1 - Preparação</h1>
+        <h1 class="jon_tituloprincipal">Fase 1 - Preparação.</h1>
         <p class="jon_paragrafo" > <strong>Jon Jones</strong> ira participar do UFC 147,
             para isso ele precisa decidir qual treinamento ele ira fazer. Escolha:
         </p>
